stops are insertion-ordered with EOS first; a reply that opens a turn has ended